src/core-crm/objects/Adhoc_Communication__c/Adhoc_Communication__c.object-meta.xml
<CustomObject>
    <label>Adhoc Communication</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>Adhoc Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>