src/core-crm/objects/Adhoc_Communication__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Adhoc Communications</relationshipLabel>
    <relationshipName>Adhoc_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>