src/core-crm/objects/Adhoc_Communication__c/fields/Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Email_Content__c</fullName>
    <label>Email Content</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>