src/core-crm/objects/Adhoc_Communication__c/fields/IsSent__c.field-meta.xml
<CustomField>
    <fullName>IsSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSent</label>
    <type>Checkbox</type>
</CustomField>