src/core-crm/objects/Adhoc_Communication__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Adhoc Communications</relationshipLabel>
    <relationshipName>Adhoc_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>