src/core-crm/objects/Adhoc_Communication__c/fields/Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Send_Date__c</fullName>
    <defaultValue>DATE( YEAR(TODAY() ), MONTH(TODAY() ), DAY(TODAY()))</defaultValue>
    <inlineHelpText>This field allows you to select a date on which the communication will be sent</inlineHelpText>
    <label>Send Date</label>
    <type>Date</type>
</CustomField>