src/core-crm/objects/Adhoc_Communication__c/validationRules/Send_Date_should_be_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Date_should_be_future_date</fullName>
    <active>true</active>
    <description>User should be able to change the Send Date with a future date only</description>
    <errorConditionFormula>Send_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Send_Date__c</errorDisplayField>
    <errorMessage>Send Date can be changed to future date only.</errorMessage>
</ValidationRule>